{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 182,
  "lineage": "c063196a-dea0-a1d5-e69e-f5a8bfab0408",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715304558557:route-table/rtb-0b7f07daeb655f2a9",
            "default_route_table_id": "rtb-0b7f07daeb655f2a9",
            "id": "rtb-0b7f07daeb655f2a9",
            "owner_id": "715304558557",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055a09c283500762e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table",
              "env": "dev"
            },
            "tags_all": {
              "Name": "default route table",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9fa9971e31255ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "walmart_web_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cb61d12413ba783",
            "arn": "arn:aws:ec2:us-west-2:715304558557:instance/i-06a69e5121235ed4e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a69e5121235ed4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "walmart-project",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c1a2973577fc19a",
            "private_dns": "ip-190-160-1-28.us-west-2.compute.internal",
            "private_ip": "190.160.1.28",
            "public_ip": "54.244.38.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050e42a0da494e430",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005634072d394a725",
            "tags": {
              "Additional": "dev_box",
              "Company": "AAIC \u0026 UoH",
              "Name": "Walmart Project Machine"
            },
            "tags_all": {
              "Additional": "dev_box",
              "Company": "AAIC \u0026 UoH",
              "Name": "Walmart Project Machine"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03aad05cee07007a0"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_vpc.assignment_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715304558557:internet-gateway/igw-055a09c283500762e",
            "id": "igw-055a09c283500762e",
            "owner_id": "715304558557",
            "tags": {
              "Env": "dev",
              "Name": "dev_gw"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "dev_gw"
            },
            "vpc_id": "vpc-0d9fa9971e31255ee"
          },
          "dependencies": [
            "aws_vpc.assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_custom_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715304558557:security-group/sg-05c923a1abd2ebc55",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c923a1abd2ebc55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "terraform_ec2_private_sg",
            "name_prefix": "",
            "owner_id": "715304558557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "dev_SG"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "dev_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9fa9971e31255ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715304558557:subnet/subnet-005634072d394a725",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "190.160.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005634072d394a725",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715304558557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "dev_subnet1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "dev_subnet1"
            },
            "vpc_id": "vpc-0d9fa9971e31255ee"
          },
          "dependencies": [
            "aws_vpc.assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "assignment_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715304558557:vpc/vpc-0d9fa9971e31255ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.160.0.0/16",
            "default_network_acl_id": "acl-0d7a84774713a172c",
            "default_route_table_id": "rtb-0b7f07daeb655f2a9",
            "default_security_group_id": "sg-03aad05cee07007a0",
            "dhcp_options_id": "dopt-aadbf7d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d9fa9971e31255ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7f07daeb655f2a9",
            "owner_id": "715304558557",
            "tags": {
              "Env": "dev",
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}